--- a/sp-form/widget.less
+++ b/sp-form/widget.less
@@ -1,8 +1,5 @@
 sp-form {
-  sp-text-field:not(:last-child) .form-group,
-  sp-select-field:not(:last-child) .form-group,
-  json-field:not(:last-child) .form-group,
-  sp-file-field:not(:last-child) .form-group {
-    margin-bottom: 1rem;
+  .field {
+    margin-bottom: 0.75rem;
   }
 }
