--- a/sp-file-list/sp-file-list.less
+++ b/sp-file-list/sp-file-list.less
@@ -1,36 +1,7 @@
 sp-file-list {
 	display: block;
-
-
-	.tile-subtitle {
-		max-width: 250px;
-	}
-
-	.drop-container {
-		position:relative;
-		height: 100%;
-
-		&.drag-over {
-			background: rgba(0, 0, 0, 0.7);
-			color: #fff !important;
-		}
-	}
-
-	.mouseover-tooltip {
-		padding:3px;
-		position: absolute;
-		bottom: 0;
-		margin: 0;
-		margin: 0 auto;
-		width: 250px;
-		left: 0%;
-		right: 0%;
-		text-align: center;
-		border-top-right-radius: 9px;
-		border-top-left-radius: 9px;
-		background: rgba(0,0,0, 0.7);
-		color: #fff;
-		cursor: pointer;
-		z-index: 50;
+	
+	article.media {
+		flex-grow: 1;
 	}
 }
