add filter demo

--- a/sp-filter-builder/sp-filter-builder.less
+++ b/sp-filter-builder/sp-filter-builder.less
@@ -1,5 +1,8 @@
 sp-filter-builder {
-    .form-horizontal {
-        padding: 0;
+    display:block;
+
+    .column {
+        padding-top: 0;
+        padding-bottom: 0;
     }
 }
