--- a/sp-dropdown/sp-dropdown.less
+++ b/sp-dropdown/sp-dropdown.less
@@ -1,23 +1,6 @@
 sp-dropdown {
-    .dropdown-wrapper {
-        position: relative;
-    }
-
-    .dropdown-content {
-        position: absolute;
-        top: 1.5rem;
-        left: 0.5rem;
-        z-index: 100;
-        width: 17.5rem;
-
-        a {
-          cursor: pointer;
-        }
-    }
-    .dropdown-content.right {
-      left:auto;
-      right:1.5rem;
-    }
+    display:block;
+    z-index: 0;
 
     .dropdown-underlay {
         z-index: 1;
