fix demo styles

--- a/src/sp-alert-container/demo/styles.less
+++ b/src/sp-alert-container/demo/styles.less
@@ -1,7 +1,8 @@
 
 .alerts-container {
     position: absolute;
-    bottom: 100px;
+    top: 100px;
     left:25%;
-    right: 25%;
+    right: 10px;
+    z-index: 100;
 }
