--- a/docs/can-bulma/bundles/can-bulma/src/sp-alert-container/demo/alert.css
+++ b/docs/can-bulma/bundles/can-bulma/src/sp-alert-container/demo/alert.css
@@ -1,2 +1,2 @@
-.alerts-container{position:absolute;bottom:100px;left:25%;right:25%}
+.alerts-container{position:absolute;top:100px;left:25%;right:10px;z-index:100}
 /*# sourceMappingURL=alert.css.map */
